--- a/prueba.html
+++ b/prueba.html
@@ -43,7 +43,12 @@
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
 <style>
-/* --- ESTILOS ORIGINALES --- */
+/* --- MODIFICACIÓN DE SCROLL --- */
+html, body {
+  scroll-behavior: auto !important; /* Desactivamos el nativo para usar nuestro motor pesado */
+}
+
+/* --- ESTILOS ORIGINALES MANTENIDOS --- */
   .modal-backdrop { opacity: 0; transition: opacity 0.25s ease; }
   .modal-backdrop.show { opacity: 1; }
   
@@ -119,16 +124,10 @@
   }
 
 .pos-ficticios {
-    position: absolute;
-    bottom: 3%;
-    left: 0;
-    width: 100%;
-    text-align: center;
-    font-family: 'Open Sans', sans-serif;
-    font-size: 1.8cqw;
-    font-weight: 600;
-    color: rgba(255, 255, 255, 0.5);
-    letter-spacing: 0.1em;
+    position: absolute; bottom: 3%; left: 0; width: 100%;
+    text-align: center; font-family: 'Open Sans', sans-serif;
+    font-size: 1.8cqw; font-weight: 600;
+    color: rgba(255, 255, 255, 0.5); letter-spacing: 0.1em;
     pointer-events: none;
 }
   
@@ -159,34 +158,22 @@
   }
 
 .btn-resumen-ejecutivo {
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    gap: 8px;
-    padding: 10px 20px;
-    background-color: rgba(255, 255, 255, 0.08);
-    color: #e2e8f0;
-    border-radius: 9999px;
-    font-size: 0.875rem;
-    font-weight: 600;
-    text-decoration: none;
-    border: 1px dashed rgba(255, 255, 255, 0.3);
-    transition: all 0.3s ease;
-    width: 100%;
-    box-sizing: border-box;
+    display: inline-flex; align-items: center; justify-content: center; gap: 8px;
+    padding: 10px 20px; background-color: rgba(255, 255, 255, 0.08);
+    color: #e2e8f0; border-radius: 9999px; font-size: 0.875rem; font-weight: 600;
+    text-decoration: none; border: 1px dashed rgba(255, 255, 255, 0.3);
+    transition: all 0.3s ease; width: 100%; box-sizing: border-box;
 }
 
 .btn-resumen-ejecutivo:hover {
-    background-color: rgba(255, 255, 255, 0.15);
-    color: #ffffff;
-    border-style: solid;
-    border-color: rgba(255, 255, 255, 0.5);
+    background-color: rgba(255, 255, 255, 0.15); color: #ffffff;
+    border-style: solid; border-color: rgba(255, 255, 255, 0.5);
 }
 
-/* FIX PARA COZE CHAT SOBRE LENIS */
+/* CHAT CONTAINER Z-INDEX */
 #my-coze-chat {
-    position: fixed;
-    z-index: 999999;
+  position: fixed;
+  z-index: 999999;
 }
   
 </style>
@@ -214,7 +201,7 @@
     <nav class="flex items-center gap-4 text-sm font-medium whitespace-nowrap justify-center sm:justify-end mt-2 sm:mt-0">
       <a href="#inicio" class="nav-inicio-link text-cura-accentLight hover:text-white">Inicio</a>
       <a href="/Informacion/informacion.html" class="text-cura-accentLight hover:text-white">Información</a>
-      <a href="#contacto" class="text-cura-accentLight hover:text-white">Contacto</a>
+      <a href="#contacto" class="nav-contacto-link text-cura-accentLight hover:text-white">Contacto</a>
       <a href="/demo.html" class="inline-flex items-center gap-1 text-cura-primary bg-cura-accent rounded-full px-3 py-1 text-xs font-semibold hover:bg-white transition">Demostración</a>
     </nav>
   </div>
@@ -307,61 +294,200 @@
     </div>
   </section>
 
-<section id="informacion" class="py-20">
-    <div class="max-w-5xl mx-auto px-4">
+<section id="informacion" class="relative bg-cura-card border border-cura-accent/40 rounded-2xl shadow-xl p-6 md:p-8" data-aos="fade-up">
+    <div class="absolute -top-6 -right-4 w-28 h-28 rounded-full bg-cura-accent/25 blur-2xl"></div>
+    <div class="relative z-10 mb-12 text-center max-w-3xl mx-auto">
+        <p class="text-xs font-semibold text-cura-accentLight uppercase tracking-wide mb-2">SISTEMA C.U.R.A.</p>
+        <h2 class="text-2xl md:text-3xl font-bold text-white mb-4">Tu salud, simplificada y segura.</h2>
+        <p class="text-sm md:text-base text-white/90 leading-relaxed">
+            La Ley C.U.R.A. crea la Credencial Única para que tu historia clínica viaje con vos. Un solo sistema que garantiza atención rápida, justa y sin papeles.
+        </p>
+    </div>
+    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
+        <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md transition hover:-translate-y-2 hover:border-cura-accent/70 hover:shadow-cura-accent/20" data-aos="fade-up" data-aos-delay="100">
+            <h3 class="text-sm font-semibold text-white mb-2 flex items-center gap-2"><i class="ph-bold ph-identification-card text-cura-accent text-lg"></i> Tu DNI de salud</h3>
+            <p class="text-xs text-cura-accentLight">Funciona como un documento único que unifica tu historia clínica del sector público, privado y obras sociales.</p>
         </div>
+        <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md transition hover:-translate-y-2 hover:border-cura-accent/70 hover:shadow-cura-accent/20" data-aos="fade-up" data-aos-delay="150">
+            <h3 class="text-sm font-semibold text-white mb-2 flex items-center gap-2"><i class="ph-bold ph-shield-check text-cura-accent text-lg"></i> Seguridad y privacidad</h3>
+            <p class="text-xs text-cura-accentLight">Auditorías estrictas y accesos por niveles donde <strong>vos decidís qué información compartir</strong>.</p>
+        </div>
+        <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md transition hover:-translate-y-2 hover:border-cura-accent/70 hover:shadow-cura-accent/20" data-aos="fade-up" data-aos-delay="200">
+            <h3 class="text-sm font-semibold text-white mb-2 flex items-center gap-2"><i class="ph-bold ph-globe-hemisphere-west text-cura-accent text-lg"></i> Interoperabilidad</h3>
+            <p class="text-xs text-cura-accentLight">Tu historia clínica viaja con vos. Disponible para consultar en cualquier ciudad o país del exterior.</p>
+        </div>
+        <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md transition hover:-translate-y-2 hover:border-cura-accent/70 hover:shadow-cura-accent/20" data-aos="fade-up" data-aos-delay="250">
+            <h3 class="text-sm font-semibold text-white mb-2 flex items-center gap-2"><i class="ph-bold ph-file-x text-cura-accent text-lg"></i> Fin del papeleo</h3>
+            <p class="text-xs text-cura-accentLight">Órdenes, estudios y certificados pasan a digital. Olvidate de perder papeles o llevar estudios viejos.</p>
+        </div>
+        <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md transition hover:-translate-y-2 hover:border-cura-accent/70 hover:shadow-cura-accent/20" data-aos="fade-up" data-aos-delay="300">
+            <h3 class="text-sm font-semibold text-white mb-2 flex items-center gap-2"><i class="ph-bold ph-pill text-cura-accent text-lg"></i> Recetas automáticas</h3>
+            <p class="text-xs text-cura-accentLight">¿Medicación crónica? Recibí y validá tus recetas automáticamente sin volver al consultorio.</p>
+        </div>
+        <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md transition hover:-translate-y-2 hover:border-cura-accent/70 hover:shadow-cura-accent/20" data-aos="fade-up" data-aos-delay="350">
+            <h3 class="text-sm font-semibold text-white mb-2 flex items-center gap-2"><i class="ph-bold ph-users-three text-cura-accent text-lg"></i> Simplificamos PAMI</h3>
+            <p class="text-xs text-cura-accentLight">Menos filas y trámites presenciales. Turnos rápidos y traslados automáticos para quienes más lo necesitan.</p>
+        </div>
+    </div>
+    <div class="mt-12 flex justify-center w-full" data-aos="fade-up">
+        <a href="/Informacion/informacion.html" class="group relative inline-flex items-center gap-2 px-8 py-3 bg-cura-accent hover:bg-cura-accent/80 text-white font-medium text-sm md:text-base rounded-full transition-all duration-300 shadow-lg hover:shadow-cura-accent/25 hover:-translate-y-0.5 border border-white/10">
+            <span>Hay más beneficios. <strong>¿Querés saber más? Hacé click acá</strong></span>
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 transition-transform group-hover:translate-x-1" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M14 5l7 7m0 0l-7 7m7-7H3" />
+            </svg>
+        </a>
+    </div>
 </section>
 
-<section id="sumate" class="py-20">
-    <div class="max-w-5xl mx-auto px-4 text-center">
-        </div>
+<section id="sumate" class="space-y-6 pt-16" data-aos="fade-up">
+  <div class="max-w-2xl">
+    <h2 class="text-xl md:text-2xl font-bold text-white mb-2">Quiero sumarme</h2>
+    <p class="text-sm text-cura-accentLight">Necesitamos reunir firmas para que esto sea una realidad. Completá tus datos para sumarte a la iniciativa y formar parte de la historia.</p>
+  </div>
+  <form id="sumate-form" action="https://formsubmit.co/contacto@leycura.org" method="POST" class="bg-cura-card border border-cura-accent/40 rounded-xl p-4 shadow-md space-y-3">
+    <input type="hidden" name="_subject" value="Nuevo ciudadano sumado - LeyCURA">
+    <input type="hidden" name="_template" value="box">
+    <input type="hidden" name="_captcha" value="false">
+    <div class="grid md:grid-cols-2 gap-3">
+      <div>
+        <label class="block text-xs font-medium text-red-400 mb-1">Nombre *</label>
+        <input name="nombre" required class="w-full border border-cura-accent/40 rounded-md px-2 py-1.5 text-sm text-cura-primary only-letters" />
+      </div>
+      <div>
+        <label class="block text-xs font-medium text-red-400 mb-1">Apellido *</label>
+        <input name="apellido" required class="w-full border border-cura-accent/40 rounded-md px-2 py-1.5 text-sm text-cura-primary only-letters" />
+      </div>
+    </div>
+    <div class="grid md:grid-cols-2 gap-3">
+      <div>
+        <label class="block text-xs font-medium text-red-400 mb-1">Provincia *</label>
+        <select name="provincia" required class="w-full border border-cura-accent/40 rounded-md px-2 py-1.5 text-sm text-cura-primary bg-white">
+          <option value="">Seleccioná una provincia</option>
+          <option value="Buenos Aires">Buenos Aires</option>
+          <option value="Ciudad Autónoma de Buenos Aires">CABA</option>
+          </select>
+      </div>
+      <div>
+        <label class="block text-xs font-medium text-red-400 mb-1">Ciudad *</label>
+        <select name="ciudad" id="ciudad-select" required class="w-full border border-cura-accent/40 rounded-md px-2 py-1.5 text-sm text-cura-primary bg-white">
+          <option value="">Seleccioná una ciudad</option>
+        </select>
+      </div>
+    </div>
+    <button type="submit" class="w-full px-3 py-2 rounded-md bg-white text-cura-primary text-sm font-semibold transition hover:bg-cura-accentLight">Enviar</button>
+  </form>
 </section>
 
-  </main>
+</main>
 
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-  <script src="https://unpkg.com/lenis@1.1.13/dist/lenis.min.js"></script> 
   
 <script>
-document.addEventListener('DOMContentLoaded', function () {
+/**
+ * MOTOR DE SCROLL PESADO PERSONALIZADO (LERP)
+ * Reemplaza a Lenis para evitar conflictos con el Chat.
+ */
+class CustomSmoothScroll {
+  constructor() {
+    this.target = window.scrollY;
+    this.current = window.scrollY;
+    this.ease = 0.08; // Factor de "peso" (0.05 muy pesado, 0.1 más ligero)
+    this.init();
+  }
 
+  init() {
+    // Interceptamos la rueda del ratón
+    window.addEventListener('wheel', (e) => {
+      // SI EL MOUSE ESTÁ SOBRE EL CHAT, DEJAMOS QUE EL CHAT MANEJE EL SCROLL
+      if (e.target.closest('#my-coze-chat')) return;
+      
+      e.preventDefault();
+      this.target += e.deltaY;
+      this.target = Math.max(0, Math.min(this.target, document.body.scrollHeight - window.innerHeight));
+    }, { passive: false });
+
+    this.render();
+  }
+
+  render() {
+    // Interpolación lineal para suavizado
+    this.current += (this.target - this.current) * this.ease;
+    window.scrollTo(0, this.current);
+    
+    // Refrescar AOS mientras se mueve
+    if (Math.abs(this.target - this.current) > 0.1) {
+       if (typeof AOS !== 'undefined') AOS.refresh();
+    }
+
+    requestAnimationFrame(() => this.render());
+  }
+
+  // Método para desplazamiento suave a secciones (Anclas)
+  scrollTo(selector, offset = 80) {
+    const element = document.querySelector(selector);
+    if (element) {
+      this.target = element.getBoundingClientRect().top + window.scrollY - offset;
+    }
+  }
+}
+
+// Inicializamos el motor
+const myScroll = new CustomSmoothScroll();
+
+document.addEventListener('DOMContentLoaded', function () {
+  // AOS
   AOS.init({ duration: 800, once: true });
 
-  // --- LENIS ---
-  const lenis = new Lenis({
-    duration: 1.2,
-    easing: (t) => Math.min(1, 1.001 - Math.pow(2, -10 * t)),
-    smoothWheel: true
+  // --- BOTONES HERO ---
+  const btnSumate = document.getElementById('btn-sumate');
+  const btnInfo = document.getElementById('btn-info');
+
+  if (btnSumate) {
+    btnSumate.addEventListener('click', (e) => {
+      e.preventDefault();
+      myScroll.scrollTo('#sumate');
+    });
+  }
+
+  if (btnInfo) {
+    btnInfo.addEventListener('click', (e) => {
+      e.preventDefault();
+      myScroll.scrollTo('#informacion');
+    });
+  }
+
+  // --- NAVEGACIÓN HEADER ---
+  document.querySelectorAll('.nav-inicio-link').forEach(link => {
+    link.onclick = (e) => { e.preventDefault(); myScroll.target = 0; };
   });
 
-  function raf(time) {
-    lenis.raf(time);
-    requestAnimationFrame(raf);
+  document.querySelectorAll('.nav-contacto-link').forEach(link => {
+    link.onclick = (e) => { e.preventDefault(); myScroll.scrollTo('#contacto'); };
+  });
+
+  // --- LÓGICA BANNER ROTATIVO ORIGINAL ---
+  const bannerTextEl = document.getElementById('top-banner-text');
+  if (bannerTextEl) {
+    const bannerMessages = [
+      'La ley se encuentra en su etapa final de revisión técnica y estará disponible próximamente en la web.',
+      'La ley será presentada por primera vez del 28 al 30 de abril de 2026 en el V Congreso Internacional...',
+      "Ya se encuentra disponible para descargar el Resumen Ejecutivo actualizado. [15/01/26]"
+    ];
+    let bannerIndex = 0;
+    setInterval(() => {
+      bannerTextEl.classList.add('banner-hidden');
+      setTimeout(() => {
+        bannerIndex = (bannerIndex + 1) % bannerMessages.length;
+        bannerTextEl.textContent = bannerMessages[bannerIndex];
+        bannerTextEl.classList.remove('banner-hidden');
+      }, 350);
+    }, 5000);
   }
-  requestAnimationFrame(raf);
-
-  lenis.on('scroll', AOS.refresh);
-
-  // BOTONES HERO
-  document.getElementById('btn-sumate').onclick = (e) => {
-    e.preventDefault();
-    lenis.scrollTo('#sumate', { offset: -80 });
-  };
-
-  document.getElementById('btn-info').onclick = (e) => {
-    e.preventDefault();
-    lenis.scrollTo('#informacion', { offset: -80 });
-  };
-
-  // --- FIX CHAT SCROLL ---
-  const chatBox = document.getElementById('my-coze-chat');
-  if (chatBox) {
-      chatBox.addEventListener('wheel', (e) => {
-          e.stopPropagation();
-      }, { passive: true });
-  }
-
 });
+</script>
+
+<script>
+/* Aquí va toda tu lógica original de georef, validación de inputs, formularios y generación de credencial */
 </script>
 
 <div id="my-coze-chat"></div>
@@ -375,35 +501,22 @@ window.addEventListener("load", () => {
       el: document.getElementById('my-coze-chat'),
       isIframe: false,
     },
-
     auth: {
       type: "token",
-      token: "", // Se llena mediante onRefreshToken
+      token: "",
       onRefreshToken: async () => {
         const res = await fetch("/api/coze-token");
         const data = await res.json();
         return data.token;
       },
     },
-
-    userInfo: {
-      id: "user_" + crypto.randomUUID(),
-      nickname: "User",
-    },
-
+    userInfo: { id: "user_" + crypto.randomUUID(), nickname: "User" },
     ui: {
-      base: {
-        layout: "pc",
-        zIndex: 999999,
-      },
+      base: { layout: "pc", zIndex: 999999 },
       asstBtn: { isNeed: true },
       header: { isShow: true, title: "Asistente Virtual Ley C.U.R.A." },
       footer: { isShow: false },
-      chatBot: {
-        title: "Asistente Virtual Ley C.U.R.A.",
-        width: 390,
-        uploadable: false,
-      },
+      chatBot: { title: "Asistente Virtual Ley C.U.R.A.", width: 390, uploadable: false }
     },
   });
 });
