--- a/index.html
+++ b/index.html
@@ -1097,107 +1097,54 @@ document.addEventListener('DOMContentLoaded', function () {
 <script src="https://sf-cdn.coze.com/obj/unpkg-va/flow-platform/chat-app-sdk/1.2.0-beta.10/libs/oversea/index.js"></script>
 
 <script>
+  window.onload = function () {
+    // --- PASO 1: LIMPIAR MEMORIA PREVIA ---
+    // Esto borra cualquier rastro de conversaciones anteriores guardadas en el navegador
+    Object.keys(localStorage).forEach(key => {
+      if (key.includes('coze')) localStorage.removeItem(key);
+    });
+    Object.keys(sessionStorage).forEach(key => {
+      if (key.includes('coze')) sessionStorage.removeItem(key);
+    });
 
-// 2. INICIALIZACIÓN DEL CHATBOT DE COZE
-
-window.onload = function () {
-
-new CozeWebSDK.WebChatClient({
-
-config: {
-
-type: 'bot',
-
-bot_id: '7596429833782214709',
-
-isIframe: false,
-
-},
-
-auth: {
-
-type: "token",
-
-token: "", // Se llena dinámicamente
-
-onRefreshToken: async () => {
-
-const res = await fetch("/api/coze-token");
-
-const data = await res.json();
-
-return data.token;
-
-}
-
-},
-
-userInfo: {
-
-id: 'user_' + Math.random().toString(36).slice(2),
-
-url: '/user_icon.png',
-
-nickname: 'User',
-
-},
-
-ui: {
-
-base: {
-
-icon: 'https://sf-coze-web-cdn.coze.com/obj/eden-sg/lm-lgvj/ljhwZthlaukjlkulzlp/coze/chatsdk-logo.png',
-
-layout: 'pc',
-
-lang: 'es', // Cambiado a español
-
-zIndex: 999999,
-
-},
-
-header: {
-
-isShow: true,
-
-isNeedClose: true,
-
-},
-
-asstBtn: {
-
-isNeed: true
-
-},
-
-footer: {
-
-isShow: true,
-
-expressionText: 'Asistente Oficial Ley C.U.R.A.',
-
-},
-
-chatBot: {
-
-title: 'Asistente Ley C.U.R.A.',
-
-uploadable: false,
-
-width: 390,
-
-},
-
-},
-
-});
-
-};
-
+    // --- PASO 2: INICIALIZAR CHAT NUEVO ---
+    new CozeWebSDK.WebChatClient({
+      config: {
+        type: 'bot',
+        bot_id: '7596429833782214709',
+        isIframe: false,
+      },
+      auth: {
+        type: "token",
+        token: "", 
+        onRefreshToken: async () => {
+          const res = await fetch("/api/coze-token");
+          const data = await res.json();
+          return data.token;
+        }
+      },
+      userInfo: {
+        // Usamos Date.now() para asegurar que el ID sea 100% distinto cada milisegundo
+        id: 'user_' + Date.now() + Math.random().toString(36).slice(2),
+        nickname: 'Ciudadano',
+      },
+      ui: {
+        base: {
+          layout: 'pc',
+          lang: 'es',
+          zIndex: 999999,
+        },
+        asstBtn: {
+          isNeed: true
+        },
+        chatBot: {
+          title: 'Asistente Ley C.U.R.A.',
+          width: 390,
+        },
+      },
+    });
+  };
 </script>
-
-
-
   
 </body>
 
