--- a/index.html
+++ b/index.html
@@ -1093,58 +1093,60 @@ document.addEventListener('DOMContentLoaded', function () {
     }
   });
 </script>
-
 <script src="https://sf-cdn.coze.com/obj/unpkg-va/flow-platform/chat-app-sdk/1.2.0-beta.10/libs/oversea/index.js"></script>
 
 <script>
-  window.onload = function () {
-    // --- PASO 1: LIMPIAR MEMORIA PREVIA ---
-    // Esto borra cualquier rastro de conversaciones anteriores guardadas en el navegador
-    Object.keys(localStorage).forEach(key => {
-      if (key.includes('coze')) localStorage.removeItem(key);
-    });
-    Object.keys(sessionStorage).forEach(key => {
-      if (key.includes('coze')) sessionStorage.removeItem(key);
-    });
 
-    // --- PASO 2: INICIALIZAR CHAT NUEVO ---
-    new CozeWebSDK.WebChatClient({
-      config: {
-        type: 'bot',
-        bot_id: '7596429833782214709',
-        isIframe: false,
+window.onload = function () {
+  // 1. LIMPIEZA PROFUNDA: Borra específicamente las llaves de Coze
+  // Coze guarda el estado en llaves que contienen la palabra 'coze' o 'flow-platform'
+  Object.keys(localStorage).forEach(key => {
+    if (key.toLowerCase().includes('coze') || key.toLowerCase().includes('flow')) {
+      localStorage.removeItem(key);
+    }
+  });
+  
+  sessionStorage.clear(); // Limpiamos también la sesión
+
+  // 2. INICIALIZACIÓN CON ID ÚNICO TEMPORAL
+  new CozeWebSDK.WebChatClient({
+    config: {
+      type: 'bot',
+      bot_id: '7596429833782214709',
+      isIframe: false,
+    },
+    auth: {
+      type: "token",
+      token: "", 
+      onRefreshToken: async () => {
+        const res = await fetch("/api/coze-token");
+        const data = await res.json();
+        return data.token;
+      }
+    },
+    userInfo: {
+      // Usamos el timestamp exacto para que Coze crea que es un ciudadano nuevo siempre
+      id: 'cura_user_' + Date.now() + Math.random().toString(36).slice(2, 7),
+      nickname: 'Ciudadano',
+    },
+    ui: {
+      base: {
+        layout: 'pc',
+        lang: 'es',
+        zIndex: 999999,
       },
-      auth: {
-        type: "token",
-        token: "", 
-        onRefreshToken: async () => {
-          const res = await fetch("/api/coze-token");
-          const data = await res.json();
-          return data.token;
-        }
+      asstBtn: {
+        isNeed: true
       },
-      userInfo: {
-        // Usamos Date.now() para asegurar que el ID sea 100% distinto cada milisegundo
-        id: 'user_' + Date.now() + Math.random().toString(36).slice(2),
-        nickname: 'Ciudadano',
+      chatBot: {
+        title: 'Asistente Ley C.U.R.A.',
+        width: 390,
       },
-      ui: {
-        base: {
-          layout: 'pc',
-          lang: 'es',
-          zIndex: 999999,
-        },
-        asstBtn: {
-          isNeed: true
-        },
-        chatBot: {
-          title: 'Asistente Ley C.U.R.A.',
-          width: 390,
-        },
-      },
-    });
-  };
+    },
+  });
+};
 </script>
+
   
 </body>
 
