--- a/index.html
+++ b/index.html
@@ -1093,6 +1093,7 @@ document.addEventListener('DOMContentLoaded', function () {
     }
   });
 </script>
-
+<!-- En tu layout principal o index.html -->
+<script src="/chatbot-widget.js" defer></script>
 </body>
 </html>
